--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+header_pages:
+  - reference.md
+  - contact.md
+  - about.md
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
